# gnark-apk-proofs

./: .gitignore  .gitmodules  Cargo.toml  README.md  go.mod
.github/workflows/: ci.yml
circuits/: go.mod  go.sum
circuits/apk/: apk.go  apk_bls_test.go  apk_export_test.go  apk_groth16_test.go  apk_plonk_test.go  apk_solidity_test.go  hash_test.go  test_helpers.go
circuits/ffi/: main.go
circuits/srs/: srs.go
pkg/apk/: apk.go  apk_bls_test.go  apk_groth16_test.go  test_helpers.go
rust/ffi/: Cargo.toml  build.rs
rust/ffi/src/: lib.rs
rust/prover/: Cargo.toml
rust/prover/src/: lib.rs  testing.rs
rust/prover/tests/: integration.rs
rust/verifier/: Cargo.toml
rust/verifier/src/: error.rs  lib.rs  proof.rs  transcript.rs  verifier.rs
rust/verifier/tests/: bls_verify.rs  verify_proof.rs
solidity/: foundry.toml
solidity/contracts/: APKVerifier.sol  ApkProof.sol  Groth16Verifier.sol  Groth16VerifierAdapter.sol  PlonkVerifier.sol  PlonkVerifierAdapter.sol
solidity/contracts/test/: GasEstimate.t.sol
solidity/test/: GasEstimate.t.sol
