[package]
name = "gnark-plonk-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
gnark-apk-prover = { path = "../prover", features = ["test-utils"] }
ark-std = "0.5"
revm = "36"
alloy-sol-types = "1"
alloy-primitives = "1"
serde_json = "1"
hex = "0.4"
w3f-bls = "0.1.9"
